--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,7 +36,7 @@ jobs:
         run: pnpm lint
 
       - name: Publish package
-        run: pnpm publish --tag latest --access public
+        run: pnpm -r publish --tag latest --access public
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NODE_AUTH_TOKEN: ${{ secrets.PUBLISH_TOKEN }}
