--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mewhhaha/eslint-plugin-simple-tailwind",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "type": "module",
   "description": "",
   "scripts": {
@@ -26,6 +26,7 @@
     "enhanced-resolve": "^5.17.1"
   },
   "devDependencies": {
+    "@tailwindcss/node": "4.0.0-beta.2",
     "@types/node": "^22.9.3",
     "@typescript-eslint/utils": "^8.15.0",
     "oxlint": "^0.13.1",
@@ -35,6 +36,7 @@
     "typescript": "^5.7.2"
   },
   "peerDependencies": {
+    "@tailwindcss/node": "4.0.0-beta.2",
     "tailwindcss": "4.0.0-beta.2"
   }
 }
