--- a/package.json
+++ b/package.json
@@ -26,14 +26,15 @@
     "enhanced-resolve": "^5.17.1"
   },
   "devDependencies": {
-    "@tailwindcss/node": "4.0.0-beta.2",
     "@types/node": "^22.9.3",
     "@typescript-eslint/utils": "^8.15.0",
+    "eslint": "^9.15.0",
     "oxlint": "^0.13.1",
     "prettier": "^3.3.3",
     "publint": "^0.2.12",
     "tailwindcss": "4.0.0-beta.2",
-    "typescript": "^5.7.2"
+    "typescript": "^5.7.2",
+    "typescript-eslint": "^8.15.0"
   },
   "peerDependencies": {
     "@tailwindcss/node": "4.0.0-beta.2",
