--- a/tsconfig.playground.json
+++ b/tsconfig.playground.json
@@ -1,5 +1,5 @@
 {
-  "include": ["test"],
+  "include": ["playground"],
   "compilerOptions": {
     "lib": ["ESNext"],
     "isolatedModules": true,
