fix group and peer and text alignment

--- a/tsconfig.playground.json
+++ b/tsconfig.playground.json
@@ -9,6 +9,7 @@
     "resolveJsonModule": true,
     "target": "ESNext",
     "strict": true,
+    "jsx": "react-jsx",
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
     "allowSyntheticDefaultImports": true,
