--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mewhhaha/eslint-plugin-simple-tailwind",
-  "version": "0.0.12",
+  "version": "0.0.13",
   "type": "module",
   "description": "",
   "scripts": {
@@ -26,17 +26,17 @@
     "enhanced-resolve": "^5.18.0"
   },
   "devDependencies": {
-    "@types/node": "^22.10.2",
-    "@typescript-eslint/utils": "^8.18.2",
-    "eslint": "^9.17.0",
-    "oxlint": "^0.15.3",
+    "@types/node": "^22.12.0",
+    "@typescript-eslint/utils": "^8.22.0",
+    "eslint": "^9.19.0",
+    "oxlint": "^0.15.8",
     "prettier": "^3.4.2",
-    "publint": "^0.2.12",
-    "tailwindcss": "4.0.0-beta.3",
-    "typescript": "^5.7.2",
-    "typescript-eslint": "^8.18.2"
+    "publint": "^0.3.2",
+    "tailwindcss": "4.0.1",
+    "typescript": "^5.7.3",
+    "typescript-eslint": "^8.22.0"
   },
   "peerDependencies": {
-    "tailwindcss": ">=4.0.0-beta.3 || >=4.0.0"
+    "tailwindcss": ">=4.0.0"
   }
 }
