--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "@mewhhaha/eslint-plugin-simple-tailwind",
-  "version": "0.0.13",
+  "version": "0.0.14",
   "type": "module",
   "description": "",
   "scripts": {
-    "build": "tsc -p tsconfig.json && publint --strict",
+    "build": "tsc -b && publint --strict",
     "lint": "oxlint"
   },
   "files": [
@@ -23,18 +23,19 @@
   "license": "MIT",
   "packageManager": "pnpm@9.14.2+sha512.6e2baf77d06b9362294152c851c4f278ede37ab1eba3a55fda317a4a17b209f4dbb973fb250a77abc463a341fcb1f17f17cfa24091c4eb319cda0d9b84278387",
   "dependencies": {
-    "enhanced-resolve": "^5.18.0"
+    "enhanced-resolve": "^5.18.1"
   },
   "devDependencies": {
-    "@types/node": "^22.12.0",
-    "@typescript-eslint/utils": "^8.22.0",
-    "eslint": "^9.19.0",
-    "oxlint": "^0.15.8",
-    "prettier": "^3.4.2",
-    "publint": "^0.3.2",
-    "tailwindcss": "4.0.1",
-    "typescript": "^5.7.3",
-    "typescript-eslint": "^8.22.0"
+    "@types/node": "^22.14.0",
+    "@types/react": "^19.1.0",
+    "@typescript-eslint/utils": "^8.29.1",
+    "eslint": "^9.24.0",
+    "oxlint": "^0.16.5",
+    "prettier": "^3.5.3",
+    "publint": "^0.3.10",
+    "tailwindcss": "4.1.3",
+    "typescript": "^5.8.3",
+    "typescript-eslint": "^8.29.1"
   },
   "peerDependencies": {
     "tailwindcss": ">=4.0.0"
