fix: accidental duplicates for classes

--- a/tsconfig.lib.json
+++ b/tsconfig.lib.json
@@ -17,6 +17,8 @@
     "noEmit": false,
     "declaration": true,
     "outDir": "./dist",
-    "rootDir": "src"
+    "rootDir": "src",
+    "verbatimModuleSyntax": true,
+    "erasableSyntaxOnly": true
   }
 }
